--- a/src/componants/Sidebar/Sidebar.css
+++ b/src/componants/Sidebar/Sidebar.css
@@ -1,10 +1,11 @@
 .sidebar{
     min-height: 100vh;
+    min-width: 250px;
     display: inline-flex;
     flex-direction: column;
     justify-content: space-between;
     background-color: #f0f4f9;
-    padding: 25px 15px;
+    padding: 25px 20px;
 }
 .sidebar img{
     width: 20px;
@@ -42,7 +43,7 @@
     display: flex;
     align-items: start;
     gap: 10px;
-    padding: 10px;
+    padding: 10px 15px;
     border-right: 40px;
     border-radius: 50px;
     cursor: pointer;
